@@ -1,3 +1,8 @@
+2008-03-10  Cedric GESTES  <dfdf@ctaf.com>
+	* regexp : better fileread/filewrite
+	* regexp : search in ~/.config/ctafconf/perso
+
+
 2008-03-09  Cedric GESTES  <ctaf42@gmail.com>
 	* regexp : support list and boolean value
 	* regexp : write change back into file
